fix font size on mobile version

--- a/css/header.css
+++ b/css/header.css
@@ -70,7 +70,7 @@ header a i {
     }
 
     header p {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         padding: 2.8125rem 0rem;
         width: 100%;
         line-height: 1.5;
